--- a/lockscreenusingservice/build.gradle
+++ b/lockscreenusingservice/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.novoda.bintray-release'
+
 
 android {
     compileSdkVersion 22
@@ -16,10 +18,26 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.1.1'
     compile 'com.romainpiel.shimmer:library:1.4.0@aar'
+
+}
+
+publish {
+    userOrg = 'dubulee'
+    groupId = 'com.github.dubulee'
+    artifactId = 'lockscreendiablehomebuttonkey'
+    publishVersion = '1.0.1'
+    desc = 'Android LockScreenSample Using Service - Disable HomeButton Key Event LockScreenSample use Android Service. So, Ignores HomeButton Key Event.'
+    website = 'https://github.com/DUBULEE/Android-LockScreenSample-DisableHomeButtonKey'
+    issueTracker = "${website}/issues"
+    repository = "${website}.git"
 }
