--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,14 @@
 
 buildscript {
     apply from: "dependecies-variable.gradle"
+    ext.kotlin_version = '1.1.2'
+
     repositories {
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
