--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,10 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+# 백그라운드 빌드
+org.gradle.daemon=true
+# 동시 빌드
+org.gradle.parallel=true
+# jvm heap size
+org.gradle.jvmargs=-Xmx4346m
+org.gradle.java.home=/Library/Java/JavaVirtualMachines/jdk1.8.0_121.jdk/Contents/Home
